<resources>
    <!-- Map -->
    <string name="map_day_label">Day %1$d (%2$s)</string>
    <string name="map_day_label_no_date">Day %1$d</string>
    <string name="map_itinerary_title">Trip Plan (%1$d stops)</string>
    <string name="map_itinerary_clear_all">Clear All</string>
    <string name="map_stop_title_format">Stop #%1$d</string>
    <string name="map_remove_stop">Remove stop</string>
    <string name="map_back">Back</string>
    <string name="map_day_menu">Day options</string>
    <string name="map_add_day">Add a day</string>
    <string name="map_delete_day">Delete this day</string>
    <string name="map_clear_day_title">Clear day %1$d?</string>
    <string name="map_clear_day_message">All %1$d stops of this day will be deleted for everyone in the trip.</string>
    <string name="map_delete_day_title">Delete day %1$d?</string>
    <string name="map_delete_day_message">The day and its %1$d stops will be deleted for everyone in the trip; later days move up.</string>
    <string name="map_confirm_delete">Delete</string>
    <string name="map_cancel">Cancel</string>

    <!-- Location errors -->
    <string name="error_location_permission_required">Location permission required to detect your location.</string>
    <string name="error_location_services_disabled">Location services are disabled on your device.</string>
    <string name="error_location_unavailable">Unable to determine current location. Showing default view.</string>
    <string name="error_location_unknown">Failed to acquire location.</string>
    <string name="error_location_unexpected">An unexpected error occurred while fetching location.</string>
    <string name="error_location_denied_manual">Location permission was denied. You can still explore destinations manually.</string>
    <string name="map_change_not_saved">Your change to the stops was not saved. Check your connection and try again.</string>
    <string name="map_retry">Retry</string>
    <string name="map_location_explain_title">Show where you are</string>
    <string name="map_location_explain_message">Tripinly uses your location to show where you are on the map.</string>
    <string name="map_location_continue">Continue</string>
    <string name="map_location_settings_title">Location is off for Tripinly</string>
    <string name="map_location_settings_message">To show where you are on the map, allow location for Tripinly in Settings.</string>
    <string name="map_location_open_settings">Open settings</string>
    <string name="map_place_add_to_day">Add to day %1$d</string>
    <string name="map_place_opening_hours">Opening hours</string>
    <string name="map_place_website">Website</string>
    <string name="map_place_likes">Likes on Tripinly</string>
    <string name="map_place_category_cafe">Café</string>
    <string name="map_place_category_restaurant">Restaurant</string>
    <string name="map_place_category_bar">Bar</string>
    <string name="map_place_category_attraction">Attraction</string>
    <string name="map_place_category_museum">Museum</string>
    <string name="map_place_category_historic">Historic site</string>
    <string name="map_place_category_park">Park</string>
    <string name="map_place_category_nature">Nature</string>
    <string name="map_place_category_landmark">Landmark</string>
    <string name="map_place_category_other">Place</string>
    <string name="map_search">Search places</string>
    <string name="map_search_placeholder">Places, addresses, cities</string>
    <string name="map_search_clear">Clear search</string>
    <string name="map_pin_name_title">Name this place</string>
    <string name="map_pin_name_label">Name</string>
    <string name="map_pin_add">Add</string>
</resources>
